@@ -32,7 +32,7 @@ requires:
   perl: 5.6.0
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=PYX-Sort
-  homepage: https://github.com/tupinek/PYX-Sort
+  homepage: https://github.com/michal-josef-spacek/PYX-Sort
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/PYX-Sort
+  repository: git://github.com/michal-josef-spacek/PYX-Sort
 version: '0.04'
