@@ -24,8 +24,8 @@ requires 'PYX::Parser' => 0.03;
 requires 'perl' => '5.6.0';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=PYX-Sort';
-resources 'homepage' => 'https://github.com/tupinek/PYX-Sort';
-resources 'repository' => 'git://github.com/tupinek/PYX-Sort';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/PYX-Sort';
+resources 'repository' => 'git://github.com/michal-josef-spacek/PYX-Sort';
 test_requires 'English' => 0;
 test_requires 'File::Object' => 0.07;
 test_requires 'Perl6::Slurp' => 0;
