@@ -77,7 +77,7 @@ SEE ALSO
         Install the PYX modules.
 
 REPOSITORY
-    <https://github.com/tupinek/PYX-Sort>
+    <https://github.com/michal-josef-spacek/PYX-Sort>
 
 AUTHOR
     Michal Špaček <mailto:skim@cpan.org>
